Bug 380909 - Wrong app icon under plasma wayland session
Summary: Wrong app icon under plasma wayland session
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-06 22:26 UTC by Patrick Silva
Modified: 2017-06-13 10:04 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (308.64 KB, image/png)
2017-06-06 22:26 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2017-06-06 22:26:49 UTC
Created attachment 105956 [details]
screenshot

K3b 17.04.1 shows generic Wayland icon in its window decoration and in plasma panel. See the screenshot please.
Comment 1 Leslie Zhai 2017-06-07 07:12:44 UTC
Hi Martin,

I have read about Window icons in your blog https://blog.martin-graesslin.com/blog/2016/10/wayland-improvements-since-plasma-5-8-release/

> K3b 17.04.1 shows generic Wayland icon in its window decoration and in
> plasma panel. See the screenshot please.

you mentioned: For Plasma 5.9 we addressed this problem and extended our protocol to request pixmap data for a window icon which doesn’t have a name. Thus we are now able to also support Xwayland windows, which increases the useability of the system quite a lot.

But I have no idea why Konsole show correct icon in the plasma panel, does k3b miss something in the desktop file?

Regards,
Leslie Zhai
Comment 2 Leslie Zhai 2017-06-07 07:15:55 UTC
Hi Dr. Chapatin,

> K3b 17.04.1 shows generic Wayland icon in its window decoration and in
> plasma panel. See the screenshot please.

K3b icon for plasma wayland session just show generic X icon in the task manager, and I am using Fedora 24, kf5 v5.33.0, plasma v5.8.6, qt v5.6.2

Regards,
Leslie Zhai
Comment 3 Eike Hein 2017-06-07 08:59:03 UTC
Please re-test with Plasma git master as the Task Manager code on Wayland has changed massively with regard to this.
Comment 4 Leslie Zhai 2017-06-07 09:22:28 UTC
Hi Eike,

Thanks for your help!

> Please re-test with Plasma git master as the Task Manager code on Wayland
> has changed massively with regard to this.

Hi Dr. Chapatin,

Please test plasma-git on ArchLinux/Test, the packager of ArchLinux is very diligent!

Regards,
Leslie Zhai
Comment 5 Patrick Silva 2017-06-07 19:02:37 UTC
Sorry, I dont know build code from git master.
Comment 6 Leslie Zhai 2017-06-08 01:37:26 UTC
Hi Dr. Chapatin,

> Sorry, I dont know build code from git master.

Never mind, it is easy to enable kde-unstable for testing https://wiki.archlinux.org/index.php/official_repositories#kde-unstable or just use plasma-workspace-git via yaourt :)

Regards,
Leslie Zhai
Comment 7 Patrick Silva 2017-06-08 03:27:55 UTC
No package is available in kde unstable repository.
Build from AUR failed.
Comment 8 Leslie Zhai 2017-06-08 03:46:15 UTC
Hi Dr. Chapatin,

> No package is available in kde unstable repository.
> Build from AUR failed.

It is easy to compile plasma-workspace under ArchLinux https://git.archlinux.org/svntogit/packages.git/tree/trunk/PKGBUILD?h=packages/plasma-workspace and git clone related git repos from https://cgit.kde.org/

Regards,
Leslie Zhai
Comment 9 Patrick Silva 2017-06-10 18:35:54 UTC
Sorry for the noob question, but are packages from neon dev from ~git master~?
Here K3b has wrong icon on neon dev too.
Comment 10 Leslie Zhai 2017-06-12 01:41:30 UTC
Hi Dr. Chapatin,

plasma-workspace-git https://aur.archlinux.org/cgit/aur.git/tree/PKGBUILD?h=plasma-workspace-git

> Sorry for the noob question, but are packages from neon dev from ~git
> master~?
> Here K3b has wrong icon on neon dev too.

Regards,
Dr. Zhai
Comment 11 Eike Hein 2017-06-12 13:22:40 UTC
Had a look at this now. The problem is in the K3b source, it sets its organization to "k3b", causing its Wayland app id to be org.k3b.k3b, but the .desktop file it installs is org.kde.k3b.desktop. This needs to be fixed in K3b.
Comment 12 Leslie Zhai 2017-06-12 13:55:10 UTC
Hi Eike,

Thanks for your hint!

Regards,
Leslie Zhai
Comment 13 Leslie Zhai 2017-06-13 07:42:47 UTC
Git commit ddd546251022534232918023971d7a99cb65ab11 by Leslie Zhai.
Committed on 13/06/2017 at 07:42.
Pushed by lesliezhai into branch 'master'.

Set organization name for Wayland icon.

Differential Revision: https://phabricator.kde.org/D5405

M  +1    -1    libk3b/projects/datacd/k3bisooptions.cpp
M  +1    -0    src/main.cpp

https://commits.kde.org/k3b/ddd546251022534232918023971d7a99cb65ab11
Comment 14 Andrius Štikonas 2017-06-13 09:47:06 UTC
setOrganizationDomain wouldn't help, as was discussed in https://phabricator.kde.org/D5405
current documented behaviour of KAboutData uses homepage (even though it doesn't bugs make much sense in my opinion) and so can't be changed before KF6. We need to set desktop file name explicitely.
Comment 15 Andrius Štikonas 2017-06-13 09:48:37 UTC
Git commit 04a19f5e5a3debdce5696459de9b862f649082e9 by Andrius Štikonas.
Committed on 13/06/2017 at 09:47.
Pushed by stikonas into branch 'master'.

Set desktop file name explicitely.

M  +1    -0    src/main.cpp

https://commits.kde.org/k3b/04a19f5e5a3debdce5696459de9b862f649082e9
Comment 16 Leslie Zhai 2017-06-13 10:04:02 UTC
Thanks a lot :)

(In reply to Andrius Štikonas from comment #15)
> Git commit 04a19f5e5a3debdce5696459de9b862f649082e9 by Andrius Štikonas.
> Committed on 13/06/2017 at 09:47.
> Pushed by stikonas into branch 'master'.
> 
> Set desktop file name explicitely.
> 
> M  +1    -0    src/main.cpp
> 
> https://commits.kde.org/k3b/04a19f5e5a3debdce5696459de9b862f649082e9