Set desktop file name explicitely.

BUG: 380909