src/main.cpp
@@ -39,6 +39,7 @@ int main( int argc, char* argv[] )
                           i18n("http://www.k3b.org" ) );
 
     aboutData.setOrganizationDomain("kde");
+    aboutData.setDesktopFileName(QStringLiteral("org.kde.k3b.desktop"));
     aboutData.addAuthor(i18n("Leslie Zhai"), i18n("Maintainer"), "lesliezhai@llvm.org.cn");
     aboutData.addAuthor(i18n("Michał Małek"),i18n("Maintainer and current lead Developer"), "michalm@jabster.pl");
     aboutData.addAuthor(i18n("Sebastian Trüg"),i18n("Main developer"), "trueg@k3b.org");
